@@ -1,2 +1,13 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST ovirt-host-deploy-1.0.1.tar.gz 410147 SHA256 6ee771cde3198c8cc1726a782474762f783eeb6e7a0c85809a269ae10d2cd51a SHA512 00d353a94c1f47b14fd00dc1dea8490bc633292895deeaea024897d1efbd70438d664d89563ec2737749ebe349a0b3bc970ca98ff05c459f56e3d7638244c39d WHIRLPOOL 9708d98f33b524e747c126630d3cb348913ee1232f841a6f1c048b194a5bb7d36ed077f2931278e0446ad504dcaa83c782cee145170bb8ee33d0cb7dc4217bd4
 DIST ovirt-host-deploy-1.1.1.tar.gz 240633 SHA256 1252a84c19088fa250f2dabdb4b4a54c24f5b99f44b5abd47b87180803a8ca5d SHA512 bb6202e0f37bdd94d740a83d1cf822dfd33f8c40a4f74e7b25311e5153fd52e354ef72cff68e331b58a5be73bf0da527519043a031e53ad02cd84889554f15ed WHIRLPOOL f344be93b43a17c1d086e9880b731d10f9f5cd2d224a8c84fe7d2f0c03cc437ea9bb0383eadd808dc4072c906a5b4a4f1e636f84b6941fff95cfadc645fd892e
+DIST ovirt-host-deploy-1.1.3.tar.gz 240817 SHA256 37d26e5485036447f458f78b433cdce5473a1b69515db5276234daebcb160f17 SHA512 91a1aac1bbf30793ae46d605cfd9a412fa27f0f91c26bcc6697b224ce0fc6d15965367bfadd033bed91ea4d7e405bdab781821573507b47d7b1ed515471c3128 WHIRLPOOL f43707e4430119d727d0b8d71a1327b4e790aebbe6665db3ef6ba7d2b89dbb0e74ae43b2451227c0a7ccae8c320be461f99b8c9acb63a0b570296f16127badcf
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlLTwiwACgkQXYk9GL8g3FHkLwD/boCspbtU9ZMDu3sJnANNQkuy
+9SD/eR9+q2GZ3AyMLR8A/3BmboBeIRn/Ryy2TFZCBteUqQuYcnbB0+jB+wKqZlGP
+=B6x2
+-----END PGP SIGNATURE-----
