@@ -1,3 +1,8 @@
+*ovirt-host-deploy-1.1.3 (13 Jan 2014)
+
+  13 Jan 2014; Alon Bar-Lev <alonbl@gentoo.org> +ovirt-host-deploy-1.1.3.ebuild:
+  Version bump
+
   02 Dec 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-host-deploy-1.0.1.ebuild,
   ovirt-host-deploy-1.1.1.ebuild, ovirt-host-deploy-9999.ebuild:
   python fixups
